argocd/src/resources/grpc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-server-grpc-route
  namespace: argocd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - "argocd.ryanguild.localhost"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
          kind: Service
          weight: 1
