argocd/src/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server-http-route
  namespace: argocd
spec:
  gatewayClassName: traefik-gateway
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - "argocd.ryanguild.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
          kind: Service
          weight: 1
    - matches:
        - headers:
            - name: Content-Type
              value: application/grpc
      backendRefs:
        - name: argocd-server
          port: 80
          kind: Service
          weight: 1
          scheme: h2c
